added base data, updated rental registration form, added needed endpoints

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,8 +4,8 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Home</a>
         <a class="p-2 text-dark" href="#">Rooms</a>
-        <a class="p-2 text-dark" href="#">Guests</a>
-        <a class="p-2 text-dark" href="#">Check in</a>
+        <a class="p-2 text-dark" href="/rental">Guests</a>
+        <a class="p-2 text-dark" href="/check-in">Check in</a>
         <a class="p-2 text-dark" href="#">Check out</a>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
