--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel management</title>
-    <link th:hre="~{fragments/bootstrap :: bootstrap}"/>
+    <link th:replace="~{fragments/bootstrap :: bootstrap}"/>
 </head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
