--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,9 +2,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"> <!-- Added shadow-sm class -->
     <h5 class="my-0 mr-md-auto font-weight-normal">Hotel management system</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Home</a>
+        <a class="p-2 text-dark" href="/">Home</a>
         <a class="p-2 text-dark" href="#">Rooms</a>
-        <a class="p-2 text-dark" href="/rental">Guests</a>
+        <a class="p-2 text-dark" href="/hotel-guests">Guests</a>
         <a class="p-2 text-dark" href="/check-in">Check in</a>
         <a class="p-2 text-dark" href="#">Check out</a>
     </nav>
