--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
         <a class="p-2 text-dark" href="#">Rooms</a>
         <a class="p-2 text-dark" href="/hotel-guests/current">Guests</a>
         <a class="p-2 text-dark" href="/check-in">Check in</a>
-        <a class="p-2 text-dark" href="#">Check out</a>
+        <a class="p-2 text-dark" href="/check-out">Check out</a>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
