--- a/src/main/resources/templates/fragments/paging.html
+++ b/src/main/resources/templates/fragments/paging.html
@@ -1,5 +1,5 @@
-<a th:fragment="paging(pageNum, label, tooltip)" class="page-link"
-   th:href="@{'/hotel-guests?' + 'page=' + ${pageNum - 1}}"
+<a th:fragment="paging(url, pageNum, label, tooltip)" class="page-link"
+   th:href="@{${url} + '?' + 'page=' + ${pageNum - 1}}"
    th:title="${tooltip}" rel="tooltip">
     [[${label}]]
 </a>
