added rentals page

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,9 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">Home</a>
         <a class="p-2 text-dark" href="#">Rooms</a>
-        <a class="p-2 text-dark" href="/hotel-guests/current">Guests</a>
+        <a class="p-2 text-dark" href="/current-rentals">Current reservations</a>
+<!--        <a class="p-2 text-dark" href="/hotel-guests/current">Guests</a>-->
+        <a class="p-2 text-dark" href="/hotel-guests">Guests</a>
         <a class="p-2 text-dark" href="/check-in">Check in</a>
         <a class="p-2 text-dark" href="/check-out">Check out</a>
     </nav>
