--- a/src/main/resources/templates/check-in.html
+++ b/src/main/resources/templates/check-in.html
@@ -65,7 +65,7 @@
             </div>
 
             <!-- Total Price -->
-            <p class="mb-3">Total Price: <span id="totalPrice">0</span>$</p>
+            <p class="mb-3"><strong>Total Price: </strong><span id="totalPrice">0</span>$</p>
 
             <div class="d-flex justify-content-center" style="margin-top: 40px">
                 <button type="button" class="btn btn-info btn-block" style="width: 200px" id="proceedButton">Proceed</button>
