--- a/src/main/resources/templates/hotel-guests.html
+++ b/src/main/resources/templates/hotel-guests.html
@@ -16,9 +16,33 @@
         <h1>
             <span th:text="${table_caption}" th:remove="tag">title</span>
         </h1>
-<!--        <a th:href="@{/hotel-guests/current}" class="btn btn-info mb-3" onclick="showCurrentGuests()">Current Guests</a>-->
-<!--        <a th:href="@{/hotel-guests}" class="btn btn-info mb-3" onclick="showAllGuests()">All Guests</a>-->
-        <button class="btn btn-success mb-3" style="color: white" data-toggle="modal" data-target="#registerGuestModal">Add guest</button>
+        <div class="row">
+            <div class="col">
+                <div class="input-group mb-3" style="width: 450px">
+                    <div class="input-group-prepend">
+                        <button class="btn btn-info dropdown-toggle" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Options</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#" onclick="selectOption('FIRST_NAME', 'First name')">First name</a>
+                            <a class="dropdown-item" href="#" onclick="selectOption('LAST_NAME', 'Last name')">Last name</a>
+                            <a class="dropdown-item" href="#" onclick="selectOption('PASSPORT', 'Passport')">Passport</a>
+                            <a class="dropdown-item" href="#" onclick="selectOption('PHONE_NUM', 'Phone num')">Phone num</a>
+                            <a class="dropdown-item" href="#" onclick="selectOption('EMAIL', 'Email')">Email</a>
+                        </div>
+                    </div>
+                    <input type="text" class="form-control" id="searchInput" aria-label="Text input with dropdown button">
+                    <div class="input-group-append">
+                        <button class="btn btn-info" type="button" onclick="searchGuests()">
+                            <i class="bi bi-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-auto">
+                <button class="btn btn-success mb-3" style="color: white" data-toggle="modal" data-target="#registerGuestModal">Add guest</button>
+            </div>
+        </div>
+        <div id="searchError" style="color: red"></div>
+
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
@@ -387,7 +411,7 @@
     }
 
     function displayErrorMessage(message) {
-        const errorContainer = document.getElementById('errorContainer');
+        const errorContainer = document.getElementById('errorContainerReg');
         errorContainer.textContent = message;
         errorContainer.style.color = 'red';
         errorContainer.style.display = 'block';
@@ -399,6 +423,65 @@
     //     errorContainer.style.color = 'green';
     //     errorContainer.style.display = 'block';
     // }
+</script>
+
+<!--Search script-->
+<script>
+    let searchCriteria = -1;
+    function selectOption(option, text) {
+        searchCriteria = option;
+        document.getElementById('dropdownMenuButton').innerText = text;
+    }
+
+    async function searchGuests() {
+        if (searchCriteria === -1) {
+            // document.getElementById('searchError').textContent = 'Please select search criteria';
+            window.location.href = '/hotel-guests';
+            return;
+        }
+        document.getElementById('searchError').textContent = '';
+
+        const paramVal = document.getElementById('searchInput').value;
+        console.log(`Searching guests by ${document.getElementById('dropdownMenuButton').innerText}: `, paramVal);
+        window.location.href = '/hotel-guests/search?criteria=' + searchCriteria + '&value=' + paramVal;
+        // const response = await fetch(`/api/guests/search?criteria=${searchCriteria}&value=${paramVal}`);
+        // const responseJson = await response.json();
+        // console.log('Search results:', responseJson);
+        // displayGuestSearchResults(responseJson);
+    }
+
+    function displayGuestSearchResults(data) {
+        const guestSearchResults = document.getElementById('guestSearchResults');
+        guestSearchResults.innerHTML = ''; // Clear previous results
+        data.forEach(guest => {
+            const guestElement = document.createElement('div');
+            guestElement.classList.add('guest-result');
+            guestElement.innerHTML = `<button class="btn btn-light guest-btn" style="margin-top: 8px" onclick="selectGuest(${guest.id}, '${guest.firstName}', '${guest.lastName}')">
+                                            <i class="fas fa-user"></i> ${guest.firstName} ${guest.lastName}
+                                      </button>`;
+            guestSearchResults.appendChild(guestElement);
+        });
+    }
+
+    function selectGuest(id, firstName, lastName) {
+        currentGuestId = id;
+        const selectedGuest = document.getElementById('selectedGuest');
+        selectedGuest.textContent = `Guest: ${firstName} ${lastName}`;
+        $('#searchGuestModal').modal('hide');
+        clearError('guestError');
+    }
+
+    $(document).ready(function() {
+        $('#searchGuestModal').on('hidden.bs.modal', function (e) {
+            $('#dropdownMenuButton').val('Options');
+            $('#searchInput').val('');
+            $('#guestSearchResults').empty();
+            document.getElementById('searchError').textContent = '';
+            document.getElementById('dropdownMenuButton').innerText = 'Options';
+            searchCriteria = -1;
+        });
+    });
+
 </script>
 </body>
 </html>
